--- a/EnterpriseWPF/App.xaml
+++ b/EnterpriseWPF/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:EnterpriseWPF"
              DispatcherUnhandledException="Application_DispatcherUnhandledException"
-             StartupUri="Views/MainWindowView.xaml">
+             StartupUri="Views/LoginView.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
